[project]
name = "neomd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "markdown>=3.10.2",
    "markdown-it-py>=4.0.0",
    "networkx>=3.6.1",
    "pyinstaller>=6.20.0",
    "pyside6>=6.10.2",
    "qdarkstyle>=3.2.3",
    "viztracer>=1.1.1",
]
